crates/control-plane-api/src/discovers/snapshots/control_plane_api__discovers__specs__tests__capture_merge_duplicate_bindings.snap
---
source: crates/control-plane-api/src/discovers/specs.rs
expression: error
---
existing capture model contains multiple bindings with the same resource path (foo)
