crates/control-plane-api/src/discovers/snapshots/control_plane_api__discovers__specs__tests__capture_merge_resource_paths_update-2.snap
---
source: crates/control-plane-api/src/discovers/specs.rs
expression: out
---
(
    [
        Binding {
            target: Collection(
                "acmeCo/renamed",
            ),
            document_schema: Schema(
                RawValue(
                    {"const":"discovered"},
                ),
            ),
            collection_key: [],
            is_fallback_key: false,
            resource_path: [
                "foo",
            ],
            disable: false,
        },
        Binding {
            target: Collection(
                "acmeCo/renamed-namepaced",
            ),
            document_schema: Schema(
                RawValue(
                    {"const":"discovered-namepaced"},
                ),
            ),
            collection_key: [],
            is_fallback_key: false,
            resource_path: [
                "foo",
                "spacename",
            ],
            disable: false,
        },
        Binding {
            target: Collection(
                "acmeCo/other",
            ),
            document_schema: Schema(
                RawValue(
                    false,
                ),
            ),
            collection_key: [],
            is_fallback_key: false,
            resource_path: [
                "bar",
            ],
            disable: true,
        },
        Binding {
            target: Collection(
                "test/collection/disabled",
            ),
            document_schema: Schema(
                RawValue(
                    false,
                ),
            ),
            collection_key: [],
            is_fallback_key: false,
            resource_path: [
                "disabled",
            ],
            disable: true,
        },
    ],
    {
        [
            "bar",
        ]: Changed {
            target: Collection(
                "acmeCo/other",
            ),
            disable: true,
            reason: None,
        },
    },
    {
        [
            "removed",
        ]: Changed {
            target: Collection(
                "acmeCo/discarded",
            ),
            disable: false,
            reason: None,
        },
    },
)
