crates/control-plane-api/src/discovers/snapshots/control_plane_api__discovers__specs__tests__response_parsing.snap
---
source: crates/control-plane-api/src/discovers/specs.rs
expression: json!(out)
---
[
  {
    "disable": true,
    "documentSchema": {
      "properties": {
        "croak": {
          "type": "string"
        }
      },
      "required": [
        "croak"
      ],
      "type": "object"
    },
    "key": [
      "/croak"
    ],
    "recommendedName": "frogs",
    "resourceConfig": {
      "stream": "greetings",
      "syncMode": "incremental"
    }
  },
  {
    "documentSchema": {
      "properties": {
        "count": {
          "type": "integer"
        },
        "message": {
          "type": "string"
        }
      },
      "required": [
        "count",
        "message"
      ],
      "type": "object"
    },
    "key": [
      "/count"
    ],
    "recommendedName": "some_greetings",
    "resourceConfig": {
      "stream": "greetings",
      "syncMode": "incremental"
    }
  }
]
